<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maurice_cam</name>
  <version>0.0.1</version>
  <description>Maurice camera driver package with GStreamer, OpenCV, and WebRTC streaming support</description>
  <maintainer email="vignesh@innate.bot">vignesh_anand</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>

  <!-- WebRTC streamer system dependencies -->
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libgstreamer1.0-dev</build_depend>
  <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>
  <build_depend>gstreamer1.0-plugins-good</build_depend>
  <build_depend>gstreamer1.0-plugins-bad</build_depend>
  <build_depend>gstreamer1.0-nice</build_depend>
  <build_depend>nlohmann-json3-dev</build_depend>

  <!-- Stereo depth estimator dependencies (NVIDIA VPI) -->
  <!-- VPI is installed at /opt/nvidia/vpi3 on Jetson platforms -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
